@@ -2,7 +2,7 @@
 .TH dk-filter 8
 
 .SH NAME
-dk-filter \- sign/verify using DK/DKIM (SSP/ADSP optionally) and deliver a
+dk-filter \- sign/verify using DKIM (SSP/ADSP optionally) and deliver a
 mail message for delivery
 
 .SH SYNOPSIS
@@ -10,14 +10,15 @@ mail message for delivery
 
 .SH DESCRIPTION
 \fBdk-filter\fR is a qfilter which can be set as a filter for
-\fBspawn-filter\fR(8) or \fBqmail-qfilter\fR(1). The filter can be set
-either as \fBFILTERARGS\fR or in the control file \fBfilterargs\fR.
+\fBspawn-filter\fR(8) or \fBqmail-qfilter\fR(1). The filter can be set for
+\fBspawn-filter\fR(8) either as \fBFILTERARGS\fR or in the control file
+\fIfilterargs\fR. The environment variable \fBFILTERARGS\fR takes
+precendence over \fIfilterargs\fR control file.
 
-\fBdk-filter\fR supports DK/DKIM signing and verification and can
+\fBdk-filter\fR supports DKIM signing and verification and can
 optionally use \fBSender Signing Practice (SSP)\fR or \fBAuthor Domain
 Signing Practice\fR. It uses the libdkim and OpenSSL libraries. To sign a
-message, set the \fBDKIMSIGN\fR environment variable (for DKIM signing) or
-\fBDKSIGIN\fR environment variable (for DK signing) to the pathname of the
+message, set the \fBDKIMSIGN\fR environment variable to the pathname of the
 private key that will be used to sign the message. If there is a %
 character in the environment variable, it is removed and replaced by the
 domain name in the From: header. If, after substituting the %, that file
@@ -33,22 +34,6 @@ rejected with error 35. The default private key
 The selector (s=) will be taken from the basename of the file. The private
 key should be created by \fBdknewkey(8)\fR with RSA or ED25519 encryption
 method.
-
-You can set various DK options in getopt style, by setting the environment
-variable DKSIGNOPTIONS
-
-.nf
-b \fI<advice_length>\fR    Length of Advice
-c \fI<canonicalization>\fR simple, nofws
-s \fI<privkeyfile>\fR      Private key
-h                    show headers included
-r                    Skip Duplicate Headers
-.fi
-
-.EX
-DKSIGNOPTIONS="-h -r -c nofws"
-sets the h= tag, skips duplicate headers and sets nofws canonicalization
-.EE
 
 You can set various DKIM options in getopt style, by setting the
 environment variable DKIMSIGNOPTIONS
@@ -77,9 +62,10 @@ sets relaxed canonicalization and include query method tag
 .EE
 
 When signing \fBdk-filter\fR uses the domain found in the Return-Path,
-Sender, From headers to set the domain tag. If not it uses the value
-of \fBBOUNCEDOMAIN\fR environment variable. \fBBOUNCEDOMAIN\fR can be set
-to an email address or a domain (without the at sign).
+Sender, From, X-Bounced-Address headers to set the domain tag. If not it
+uses the value of \fBBOUNCEDOMAIN\fR environment variable.
+\fBBOUNCEDOMAIN\fR can be set to an email address or a domain (without the
+at sign).
 
 In addition to \fBDKIMSIGN\fR environment variable, you can have the domain
 and the pathname of the private key in the control file \fIdkimkeys\fR
@@ -102,11 +88,10 @@ If an entry for \fIdomain\fR exists in \fIdkimkeys\fR, the value of
 \fBDKIMSIGN\fR environment variable is ignored. You can disable
 \fIdkimkeys\fR by setting \fBNODKIMKEYS\fR environment variable.
 
-To verify a message, set the \fBDKIMVERIFY\fR or \fBDKVERIFY\fR environment
-variables. \fBdk-filter\fR always inserts the \fBDKIM-Status\fR or
-\fBDomainKey-Status\fR header, so that messages can be rejected later at
-delivery time, or in the mail reader. In that case you may set
-\fBDKIMVERIFY\fR or \fBDKVERIFY\fR to an empty string. The exit code of
+To verify a message, set the \fBDKIMVERIFY\fR environment variable.
+\fBdk-filter\fR always inserts the \fBDKIM-Status\fR header, so that
+messages can be rejected later at delivery time, or in the mail reader. In
+that case you may set \fBDKIMVERIFY\fR to an empty string. The exit code of
 \fBdk-filter\fR can be fine tuned by setting \fBDKIMVERIFY\fR environment
 variable. See \fBdkim(8)\fR for a detailed description on setting the
 \fBDKIMVERIFY\fR environment variable.
@@ -114,8 +99,8 @@ variable. See \fBdkim(8)\fR for a detailed description on setting the
 \fBdk-filter\fR does not use any signing practice by default. You can
 override this by setting the SIGN_PRACTICE to ssp or adsp (lowercase).
 
-If neither of these environment variables (DKIMSIGN, DKSIGN, DKIMVERIFY,
-DKVERIFY) are defined, dk-filter will do signing by default.
+If neither of the environment variables DKIMSIGN, DKIMVERIFY are defined,
+dk-filter will do signing by default.
 
 You can set environment variable NODKIM environment variable to disable
 DKIM signing and verification, but why would you do that?
