@@ -157,7 +157,13 @@ Release 3.0.6-1.1 Start 25/10/2023 End 01/01/2024
 - 02/01/2024
 87. svctool: fix symbolic links clientcert.pem, scan.conf
 88. Makefile: fix compilation error for forward, filterit
-89. renamed cronlist.q, cronlist.i to indimail-mta.cron, indimail.cron
+89. create_services: renamed cronlist.q, cronlist.i to indimail-mta.cron,
+    indimail.cron
+- 05/01/2024
+90. dk-filter.sh: fix BOUNCEDOMAIN getting unset
+91. dk-filter.sh: use dkim -d bouncedomain for bounces
+92. getDomainToken.c: return correct domain when local or remote delivery is
+    not set
 
 * Tue Oct 17 2023 18:34:04 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.5-1.1%{?dist}
 Release 3.0.5-1.1 Start 11/09/2023 End 17/10/2023
